Fixed poll page spacing bug

--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -771,7 +771,8 @@ pre code {
   margin-right: auto;
   margin-left: auto;
 }
-.row {
+.
+ {
   text-align: center;
   display: block;
 }
@@ -2690,16 +2691,20 @@ input[type="button"].btn-block {
 .glyphicon-ban-circle:before {
   content: "\e090";
 }
-.glyphicon-arrow-left:before {
+.glyphicon-ar
+-left:before {
   content: "\e091";
 }
-.glyphicon-arrow-right:before {
+.glyphicon-ar
+-right:before {
   content: "\e092";
 }
-.glyphicon-arrow-up:before {
+.glyphicon-ar
+-up:before {
   content: "\e093";
 }
-.glyphicon-arrow-down:before {
+.glyphicon-ar
+-down:before {
   content: "\e094";
 }
 .glyphicon-share-alt:before {
@@ -2801,16 +2806,20 @@ input[type="button"].btn-block {
 .glyphicon-hand-down:before {
   content: "\e130";
 }
-.glyphicon-circle-arrow-right:before {
+.glyphicon-circle-ar
+-right:before {
   content: "\e131";
 }
-.glyphicon-circle-arrow-left:before {
+.glyphicon-circle-ar
+-left:before {
   content: "\e132";
 }
-.glyphicon-circle-arrow-up:before {
+.glyphicon-circle-ar
+-up:before {
   content: "\e133";
 }
-.glyphicon-circle-arrow-down:before {
+.glyphicon-circle-ar
+-down:before {
   content: "\e134";
 }
 .glyphicon-globe:before {
@@ -5225,6 +5234,7 @@ button.close {
 .tooltip.top {
   padding: 5px 0;
   margin-top: -3px;
+  white-space:pre-wrap;
 }
 .tooltip.right {
   padding: 0 5px;
@@ -5247,60 +5257,69 @@ button.close {
   background-color: #000;
   border-radius: 4px;
 }
-.tooltip-arrow {
+.tooltip-ar
+ {
   position: absolute;
   width: 0;
   height: 0;
   border-color: transparent;
   border-style: solid;
 }
-.tooltip.top .tooltip-arrow {
+.tooltip.top .tooltip-ar
+ {
   bottom: 0;
   left: 50%;
   margin-left: -5px;
   border-width: 5px 5px 0;
   border-top-color: #000;
 }
-.tooltip.top-left .tooltip-arrow {
+.tooltip.top-left .tooltip-ar
+ {
   bottom: 0;
   left: 5px;
   border-width: 5px 5px 0;
   border-top-color: #000;
 }
-.tooltip.top-right .tooltip-arrow {
+.tooltip.top-right .tooltip-ar
+ {
   right: 5px;
   bottom: 0;
   border-width: 5px 5px 0;
   border-top-color: #000;
 }
-.tooltip.right .tooltip-arrow {
+.tooltip.right .tooltip-ar
+ {
   top: 50%;
   left: 0;
   margin-top: -5px;
   border-width: 5px 5px 5px 0;
   border-right-color: #000;
 }
-.tooltip.left .tooltip-arrow {
+.tooltip.left .tooltip-ar
+ {
   top: 50%;
   right: 0;
   margin-top: -5px;
   border-width: 5px 0 5px 5px;
   border-left-color: #000;
 }
-.tooltip.bottom .tooltip-arrow {
+.tooltip.bottom .tooltip-ar
+ {
   top: 0;
   left: 50%;
   margin-left: -5px;
   border-width: 0 5px 5px;
   border-bottom-color: #000;
 }
-.tooltip.bottom-left .tooltip-arrow {
+.tooltip.bottom-left .tooltip-ar
+ {
   top: 0;
   left: 5px;
   border-width: 0 5px 5px;
   border-bottom-color: #000;
 }
-.tooltip.bottom-right .tooltip-arrow {
+.tooltip.bottom-right .tooltip-ar
+ {
   top: 0;
   right: 5px;
   border-width: 0 5px 5px;
@@ -5349,8 +5368,10 @@ button.close {
 .popover-content {
   padding: 9px 14px;
 }
-.popover > .arrow,
-.popover > .arrow:after {
+.popover > .ar
+,
+.popover > .ar
+:after {
   position: absolute;
   display: block;
   width: 0;
@@ -5358,14 +5379,17 @@ button.close {
   border-color: transparent;
   border-style: solid;
 }
-.popover > .arrow {
+.popover > .ar
+ {
   border-width: 11px;
 }
-.popover > .arrow:after {
+.popover > .ar
+:after {
   content: "";
   border-width: 10px;
 }
-.popover.top > .arrow {
+.popover.top > .ar
+ {
   bottom: -11px;
   left: 50%;
   margin-left: -11px;
@@ -5373,14 +5397,16 @@ button.close {
   border-top-color: rgba(0, 0, 0, .25);
   border-bottom-width: 0;
 }
-.popover.top > .arrow:after {
+.popover.top > .ar
+:after {
   bottom: 1px;
   margin-left: -10px;
   content: " ";
   border-top-color: #fff;
   border-bottom-width: 0;
 }
-.popover.right > .arrow {
+.popover.right > .ar
+ {
   top: 50%;
   left: -11px;
   margin-top: -11px;
@@ -5388,14 +5414,16 @@ button.close {
   border-right-color: rgba(0, 0, 0, .25);
   border-left-width: 0;
 }
-.popover.right > .arrow:after {
+.popover.right > .ar
+:after {
   bottom: -10px;
   left: 1px;
   content: " ";
   border-right-color: #fff;
   border-left-width: 0;
 }
-.popover.bottom > .arrow {
+.popover.bottom > .ar
+ {
   top: -11px;
   left: 50%;
   margin-left: -11px;
@@ -5403,14 +5431,16 @@ button.close {
   border-bottom-color: #999;
   border-bottom-color: rgba(0, 0, 0, .25);
 }
-.popover.bottom > .arrow:after {
+.popover.bottom > .ar
+:after {
   top: 1px;
   margin-left: -10px;
   content: " ";
   border-top-width: 0;
   border-bottom-color: #fff;
 }
-.popover.left > .arrow {
+.popover.left > .ar
+ {
   top: 50%;
   right: -11px;
   margin-top: -11px;
@@ -5418,7 +5448,8 @@ button.close {
   border-left-color: #999;
   border-left-color: rgba(0, 0, 0, .25);
 }
-.popover.left > .arrow:after {
+.popover.left > .ar
+:after {
   right: 1px;
   bottom: -10px;
   content: " ";
@@ -5609,8 +5640,10 @@ button.close {
 .container:after,
 .container-fluid:before,
 .container-fluid:after,
-.row:before,
-.row:after,
+.
+:before,
+.
+:after,
 .form-horizontal .form-group:before,
 .form-horizontal .form-group:after,
 .btn-toolbar:before,
@@ -5637,7 +5670,8 @@ button.close {
 .clearfix:after,
 .container:after,
 .container-fluid:after,
-.row:after,
+.
+:after,
 .form-horizontal .form-group:after,
 .btn-toolbar:after,
 .btn-group-vertical > .btn-group:after,
@@ -5701,7 +5735,8 @@ button.close {
     display: table;
   }
   tr.visible-xs {
-    display: table-row !important;
+    display: table-
+     !important;
   }
   th.visible-xs,
   td.visible-xs {
@@ -5716,7 +5751,8 @@ button.close {
     display: table;
   }
   tr.visible-sm {
-    display: table-row !important;
+    display: table-
+     !important;
   }
   th.visible-sm,
   td.visible-sm {
@@ -5731,7 +5767,8 @@ button.close {
     display: table;
   }
   tr.visible-md {
-    display: table-row !important;
+    display: table-
+     !important;
   }
   th.visible-md,
   td.visible-md {
@@ -5746,7 +5783,8 @@ button.close {
     display: table;
   }
   tr.visible-lg {
-    display: table-row !important;
+    display: table-
+     !important;
   }
   th.visible-lg,
   td.visible-lg {
@@ -5784,7 +5822,8 @@ button.close {
     display: table;
   }
   tr.visible-print {
-    display: table-row !important;
+    display: table-
+     !important;
   }
   th.visible-print,
   td.visible-print {
